[package]
name = "docker_rl"
version = "0.1.0"
authors = ["Alex Dorrell <alexdorrell9@gmail.com>"]
repository = "https://github.com/dorrella/docker-rl"
edition = "2018"
description = "Small package to get rate limit from docker hub"
readme = "README.md"
license = "Apache-2.0"
keywords = ["docker"]
categories = ["command-line-utilities"]
exclude = [".*"]

[lib]
name="libdocker_rl"

[[bin]]
name = "docker-rl"
path = "src/main.rs"

[dependencies]
reqwest = "0.11.4"
tokio = { version = "1.9.0", features = ["full"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
rpassword = "5.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
overflow-checks = true